Update 2: Fading labels on slide 1; Blured video on slide 2;

--- a/index.html
+++ b/index.html
@@ -33,18 +33,35 @@
             text-align: center;
             overflow: hidden;
         }
+        #educationVideo.active {
+            -webkit-filter: blur(64px);
+        }
 
     </style>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-
     <script type="text/javascript" src="script/jquery.fullPage.js"></script>
-
     <script type="text/javascript">
         $(document).ready(function() {
-            $('#layer').fadeOut(1).delay(1600).fadeIn(1000);
-            $('#educationLayer').fadeOut(1).delay(1600).fadeIn(1000);
+            $('#hello').fadeOut(1).delay(1600).fadeIn(1000).delay(1500).fadeOut(700);
+            $('#name').fadeOut(1).delay(4800).fadeIn(1000);
+
+            function blurElement(element, size) {
+                var filterVal = 'blur(' + size + 'px)';
+                $(element)
+                        .delay(700)
+                        .css('filter', filterVal)
+                        .css('webkitFilter', filterVal)
+                        .css('mozFilter', filterVal)
+                        .css('oFilter', filterVal)
+                        .css('msFilter', filterVal)
+                        .css('transition', 'all 0.5s ease-out')
+                        .css('-webkit-transition', 'all 0.5s ease-out')
+                        .css('-moz-transition', 'all 0.5s ease-out')
+                        .css('-o-transition', 'all 0.5s ease-out');
+
+            }
 
             $('#fullpage').fullpage({
                 'css3': true,
@@ -56,7 +73,9 @@
                 'animateAnchor': true,
                 'afterLoad': function(anchorLink, index) {
                     if (index == 2) {
-                        //$('#someclass, #anotherOne).addClass('active');
+//                        $('#educationVideo').css({"-webkit-filter": "blur(64px)"}); // работает
+                        $("#educationLayer").addClass('active').fadeIn(1000);
+                        blurElement("#educationVideo", 64);
                     }
                 },
                 'onLeave': function(index, nextIndex, direction) {
@@ -73,18 +92,19 @@
 <body>
     <div id="fullpage">
         <div class="section" id="section0">
-            <video autoplay muted id="entryVideo" tabindex="-1" style="z-index: -1; min-width: 100%; min-height: 100%; width: auto; height: auto; position: absolute; right: 0; top: 0; object-fit: cover;  background-image: none;" >
+            <video autoplay muted id="entryVideo" tabindex="-1" style="z-index: -1; /*min-width: 100%; min-height: 100%;*/ width: 100%; height: 100%; position: absolute; right: 0; top: 0; object-fit: cover;  background-image: none;" >
                 <source src="http://images.apple.com/media/us/music/2015/758e7234_576d_4c94_8dc0_54994631d0fb/overview/hero.mp4" />
             </video>
             <div id="layer" style="z-index: 2">
-                <h1 id="hello" style="color: aliceblue">Hello</h1>
+                <h1 id="hello" style="color: aliceblue;">Hello</h1>
+                <h1 id="name" style="color: aliceblue;">My name is Segey</h1>
             </div>
         </div>
         <div class="section" id="section1">
             <video autoplay loop muted id="educationVideo" tabindex="-1" style="z-index: -1; min-width: 100%; min-height: 100%; width: 100%; height: auto; position: fixed; right: 0; top: 100%; object-fit: cover;  background-image: none;">
                 <source src="http://images.apple.com/media/us/music/2015/758e7234_576d_4c94_8dc0_54994631d0fb/overview/connect.mp4" />
             </video>
-            <div id="educationLayer" style="z-index: 2;">
+            <div id="educationLayer" style="z-index: 2; invisible: true;">
                 <h1 style="color: aliceblue">Education</h1>
             </div>
         </div>
