--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Sergey Popov" />
     <meta name="description" content="site-resume about Sergey Popov" />
     <meta name="Resource-type" content="Document" />
+   <!-- <meta http-equiv="Cache-Control" content="public" /> -->
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fullpage.css" />
     <link rel="stylesheet" type="text/css" href='http://fonts.googleapis.com/css?family=PT+Sans:400, 700' />
@@ -17,12 +18,13 @@
         }
         h1 {
             font-size: 5em;
-            margin: 0;
-            padding: 0;
+            line-height: 1.0625;
+            font-weight: 200;
+            margin: 0.5em 0 0 0;
         }
         h2 {
             font-size: 2em;
-            margin: 0 0 18px 0;
+            margin: 0.5em 0 0 0;
         }
         img {
             -webkit-transition: all 0.7s ease-out;
@@ -34,15 +36,15 @@
             text-align: center;
             overflow: hidden;
         }
-        #educationVideo.active {
-            -webkit-filter: blur(64px);
+        #educationVideo {
+
         }
 
     </style>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="script/jquery.fullPage.js"></script>
+    <script type="text/javascript" src="script/jquery.fullpage.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
 //            $('#hello').fadeOut(1).delay(800).fadeIn(1000).delay(1500).fadeOut(700);
@@ -63,7 +65,8 @@
                         .css('-o-transition', 'all 1.0s ease-out');
             }
 
-            var counter = 0;
+            var slide01Counter = 0;
+            var slide02Counter = 0;
 
             $('#fullpage').fullpage({
                 'css3': true,
@@ -76,32 +79,24 @@
                 'animateAnchor': true,
                 'afterLoad': function(anchorLink, index) {
                     if (index == 1)  {
-                        if (counter == 0) {
+                        if (slide01Counter == 0) {
                             $('#hello').fadeOut(1).delay(800).fadeIn(1000).delay(1500).fadeOut(700);
                             $('#name').fadeOut(1).delay(4800).fadeIn(1000);
                             $('#thanks').fadeOut(1);
-                            counter = 1;
+                            slide01Counter = 1;
                         } else {
                             $('#name').fadeOut(1);
                             $('#thanks').fadeIn(1000);
                         }
                     }
                     if (index == 2) {
-//                        $('#educationVideo').css({"-webkit-filter": "blur(64px)"}); //// работает
-                        $("#educationLayer").addClass('active').delay(1000).fadeIn(1000);
-                        $("#educationVideo").delay(1000);
-//                        $("#educationVideo").delay(1000).animate({ //// не работает
-//                            "filter": "blur(64px)",
-//                            "webkitFilter": "blur(64px)",
-//                            "mozFilter": "blur(64px)",
-//                            "oFilter": "blur(64px)",
-//                            "msFilter": "blur(64px)",
-//                            "transition": "all 0.5s ease-out",
-//                            "-webkit-transition": "all 0.5s ease-out",
-//                            "-moz-transition": "all 0.5s ease-out",
-//                            "-o-transition": "all 0.5s ease-out"
-//                        }, "fast");
-                        blurElement("#educationVideo", 64);
+//                        $('#educationVideo').delay(1000).css({"-webkit-filter": "blur(64px)"}); //// работает
+                        if (slide02Counter == 0) {
+                            $("#educationLayer").addClass('active').delay(800).fadeIn(1000).delay(1500).fadeOut(700);
+//                            $('#educationVideo').delay(1000).css({"-webkit-filter": "blur(64px)"}); //// работает
+                            blurElement("#educationVideo", 64);
+                            slide02Counter = 1;
+                        }
                     }
                 },
                 'onLeave': function(index, nextIndex, direction) {
@@ -133,6 +128,7 @@
             </video>
             <div id="educationLayer" style="z-index: 2;">
                 <h1 style="color: aliceblue">Education</h1>
+
             </div>
         </div>
         <div class="section" id="section2">
